Instructions how to install the Berkeley datascience package is added at the top.

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polynomial regression"
+    "# Polynomial regression\n",
+    "It needs the datascience package from Berkeley<br>\n",
+    "https://github.com/data-8/datascience<br>\n",
+    "Installation is 'pip install datascience'"
    ]
   },
   {
@@ -13,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#Please run this first\n",
     "import sys\n",
     "import numpy as np\n",
