--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -164,15 +164,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model here is y = slope * x + interception where the slope is coefficients[0].<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_function = lambda age: coefficients[0] * age + interception\n",
+    "slope = coefficients[0]\n",
+    "prediction_function = lambda age: slope * age + interception\n",
     "print(prediction_function)\n",
     "age = 31\n",
     "print('your predicted HR is %d' % prediction_function(age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.column('Age')"
    ]
   },
   {
@@ -201,6 +218,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We are adding a column to the table.\n",
+    "# table.with_column() will create a new table.\n",
+    "# The original table will not change.\n",
+    "table.with_column(\n",
+    "    'Linear Prediction', prediction_array\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Original table didn't change\n",
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now I assign the newly created table to the table variable to save the changes\n",
     "table = table.with_column(\n",
     "    'Linear Prediction', prediction_array\n",
     ")\n",
