Most of the cells commented to explain the code.

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -58,6 +58,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# _(underscore) is just a dummy variable\n",
+    "# It is totaly okay to use it as a variable name\n",
+    "# _ will take each element from the two dimentional array x\n",
+    "# and take the first element of with index zero.\n",
+    "# These first elements are just a number.\n",
+    "# In the first iteration _ will be [16]\n",
+    "# The first element of this array is 16.\n",
+    "# Actually each array has only one element.\n",
     "x_one_dimensional = [_[0] for _ in x]\n",
     "x_one_dimensional"
    ]
@@ -68,6 +76,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This will create a table with two columns.\n",
+    "# The first column is labeled as 'Age' and the values are comming from the array of \n",
+    "# x_one_dimensional.\n",
+    "# The second column is labeled as 'Heart rate' and the values are comming from the \n",
+    "# array of y.\n",
     "table = Table().with_columns(\n",
     "    'Age', x_one_dimensional,\n",
     "    'Heart rate', y\n",
@@ -90,6 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is a general function that can calculate \n",
     "def polynomial_regression(x, y, degree_my = 1):\n",
     "  \"\"\"\n",
     "  Return R^2, coefficients and the interception\n",
@@ -139,8 +153,15 @@
     "  interception = model.intercept_\n",
     "  coefficients = model.coef_\n",
     "\n",
-    "  return (coefficient_of_determination, coefficients, interception)\n",
-    "\n",
+    "  return (coefficient_of_determination, coefficients, interception)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def linear_regression(x, y):\n",
     "  \"\"\"\n",
     "  Returns R^2, slope and interception\n",
@@ -458,6 +479,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This will calculate all the polynomial regressions from degree 2 to 100.\n",
+    "# Then sort them by R^2 and print out the first 5 rows.\n",
     "top_polynomial_regressions(x, y, 100, 5)"
    ]
   },
@@ -467,6 +490,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The default values for the number of rows are ten.\n",
+    "# So if we don't specify the fourth argument then it will print out \n",
+    "# the default 10 numbe of rows.\n",
     "top_polynomial_regressions(x, y, 100)"
    ]
   },
@@ -485,6 +511,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We can get the help on any function that has a written documentation\n",
+    "# Since we wrote the documentation in the function between the tripple double quotes \"\"\"\n",
+    "# then we can see what the function supposed to do.\n",
+    "# It is a good practice to write the documentation for functions.\n",
     "help(polynomial_regression)"
    ]
   },
@@ -529,6 +559,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We specify only the horizontal axis so all the other columns are going to be\n",
+    "# graphed with different colors.\n",
+    "table.scatter('Age')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# table.scatter(0) will do exactly the same as table.scatter('Age')\n",
+    "# We could specify the column by its label or just the column number\n",
     "table.scatter(0)"
    ]
   }
